# kaorukotorrent

./: Cargo.toml  summary.md
.github/workflows/: build.yml  clippy.yml  fmt.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
market/: Cargo.toml
market/src/: dtos.rs  lib.rs  main.rs  routes.rs  store.rs
receiver/: Cargo.toml
receiver/src/: lib.rs  main.rs
receiver/tests/: e2e.rs
sender/: Cargo.toml
sender/src/: config.rs  dtos.rs  lib.rs  main.rs  market.rs  metadata.rs  routes.rs  state.rs
